RESOLVED FIXED314401
REGRESSION (309405@main): wral.com has lots of blank areas
https://bugs.webkit.org/show_bug.cgi?id=314401
Summary REGRESSION (309405@main): wral.com has lots of blank areas
alan
Reported 2026-05-08 06:48:32 PDT
Attachments
[fast-cq]Patch (18.13 KB, patch)
2026-05-08 07:32 PDT, alan
no flags
alan
Comment 1 2026-05-08 07:32:03 PDT
Created attachment 479528 [details] [fast-cq]Patch
EWS
Comment 2 2026-05-08 16:02:39 PDT
Committed 312916@main (dfa75cece781): <https://commits.webkit.org/312916@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479528 [details].
Note You need to log in before you can comment on or make changes to this bug.